# qxmpp

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  QXmppClient.pro  QXmppConfig.cmake  QXmppConfig.cmake.in  README  README.md  SECURITY.md  gradle.properties  logo.svg.license  qxmpp.kdev4  qxmpp.pc.in  qxmpp.prf  qxmpp.pri  qxmpp.pro  qxmpp_legacy.pc.in
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  doap.xml  doc.pri  doc.pro  doxyfilter.cpp  index.doc  using.doc  xep.doc
doc/doap-rendering/: README.md  doap.css  doap.xsl  update-xeplist.sh  xeplist.xml  xeplist.xml.license
doc/html/: QXmppArchiveIq_8h_source.html  QXmppArchiveManager_8h_source.html  QXmppBind_8h_source.html  QXmppByteStreamIq_8h_source.html  QXmppCallManager_8h_source.html  QXmppClient_8h_source.html  QXmppCodec_8h_source.html  QXmppConfiguration_8h_source.html  QXmppConstants_8h_source.html  QXmppDataForm_8h_source.html  QXmppDiscoveryIq_8h_source.html  QXmppElement_8h_source.html  QXmppIbbIq_8h_source.html  QXmppInvokable_8h_source.html  QXmppIq_8h_source.html  QXmppJingleIq_8h_source.html  QXmppLogger_8h_source.html  QXmppMessage_8h_source.html  QXmppMucIq_8h_source.html  QXmppMucManager_8h_source.html  QXmppNonSASLAuth_8h_source.html  QXmppPacket_8h_source.html  QXmppPingIq_8h_source.html  QXmppPresence_8h_source.html  QXmppReconnectionManager_8h_source.html  QXmppRemoteMethod_8h_source.html  QXmppRosterIq_8h_source.html  QXmppRosterManager_8h_source.html  QXmppRoster_8h_source.html  QXmppRpcIq_8h_source.html  QXmppSession_8h_source.html  QXmppSocks_8h_source.html  QXmppStanza_8h_source.html  QXmppStreamFeatures_8h_source.html  QXmppStreamInitiationIq_8h_source.html  QXmppStream_8h_source.html  QXmppStun_8h_source.html  QXmppTransferManager_8h_source.html  QXmppUtils_8h_source.html  QXmppVCardManager_8h_source.html  (+133 more)
examples/: CMakeLists.txt  example.pri  example.pro  examples.pri  examples.pro
examples/GuiClient/: GuiClient.pro  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  accountsCache.cpp  accountsCache.h  avatarWidget.cpp  avatarWidget.h  capabilitiesCache.cpp  capabilitiesCache.h  capabilitiesCollection.cpp  capabilitiesCollection.h  chatDialog.cpp  chatDialog.h  chatDialog.ui  chatGraphicsScene.cpp  chatGraphicsScene.h  chatGraphicsView.cpp  chatGraphicsView.h  chatMsgGraphicsItem.cpp  chatMsgGraphicsItem.h  customLabel.cpp  customLabel.h  customListView.cpp  customListView.h  customPushButton.cpp  customPushButton.h  customToolButton.cpp  customToolButton.h  main.cpp  mainDialog.cpp  mainDialog.h  mainDialog.ui  messageGraphicsItem.cpp  messageGraphicsItem.h  profileDialog.cpp  profileDialog.h  profileDialog.ui  resources.qrc  rosterItem.cpp  (+29 more)
examples/audio_call/: AudioCall.cpp  CMakeLists.txt
examples/example_0_connected/: README  example_0_connected.cpp  example_0_connected.pro  main.cpp
examples/example_0_connected_symbian/: README  example_0_connected_symbian.pro  main.cpp  main.h
examples/example_1_echoClient/: README  echoClient.cpp  echoClient.h  example_1_echoClient.cpp  example_1_echoClient.h  example_1_echoClient.pro  main.cpp
examples/example_2_rosterHandling/: README  example_2_rosterHandling.cpp  example_2_rosterHandling.h  example_2_rosterHandling.pro  xmppClient.cpp  xmppClient.h
examples/example_3_transferHandling/: example_3_transferHandling.cpp  example_3_transferHandling.h  example_3_transferHandling.pro  example_3_transferHandling.qrc  main.cpp  xmppClient.cpp  xmppClient.h
examples/example_4_callHandling/: example_4_callHandling.cpp  example_4_callHandling.h  example_4_callHandling.pro  main.cpp  xmppClient.cpp  xmppClient.h
examples/example_5_rpcInterface/: CMakeLists.txt  example_5_rpcInterface.pro  main.cpp  remoteinterface.cpp  remoteinterface.h  rpcClient.cpp  rpcClient.h  xmlrpctest.txt.license
examples/example_6_rpcClient/: CMakeLists.txt  example_6_rpcClient.pro  main.cpp  rpcClient.cpp  rpcClient.h
examples/example_7_archiveHandling/: example_7_archiveHandling.cpp  example_7_archiveHandling.h  example_7_archiveHandling.pro  main.cpp  xmppClient.cpp  xmppClient.h
examples/example_8_server/: example_8_server.cpp  example_8_server.pro  main.cpp  xmppServer.cpp  xmppServer.h
examples/example_9_vCard/: CMakeLists.txt  README  example_9_vCard.cpp  example_9_vCard.h  example_9_vCard.pro  main.cpp  xmppClient.cpp  xmppClient.h
examples/tests/: tests.h  tests.pro
src/: CMakeLists.txt  QXmppArchiveIq.cpp  QXmppArchiveIq.h  QXmppArchiveManager.cpp  QXmppArchiveManager.h  QXmppBind.cpp  QXmppBind.h  QXmppBindIq.cpp  QXmppBindIq.h  QXmppBookmarkManager.cpp  QXmppBookmarkManager.h  QXmppBookmarkSet.cpp  QXmppByteStreamIq.cpp  QXmppByteStreamIq.h  QXmppCallManager.cpp  QXmppCallManager.h  QXmppClient.cpp  QXmppClient.h  QXmppClientExtension.cpp  QXmppClientExtension.h  QXmppCodec.cpp  QXmppCodec.h  QXmppConfiguration.cpp  QXmppConfiguration.h  QXmppConstants.cpp  QXmppConstants.h  QXmppDataForm.cpp  QXmppDataForm.h  QXmppDialback.cpp  QXmppDialback.h  QXmppDiscoveryIq.cpp  QXmppDiscoveryIq.h  QXmppDiscoveryManager.cpp  QXmppDiscoveryManager.h  QXmppElement.cpp  QXmppElement.h  QXmppEntityTimeIq.cpp  QXmppEntityTimeIq.h  QXmppEntityTimeManager.cpp  QXmppEntityTimeManager.h  (+104 more)
src/base/: Algorithms.h  QXmppArchiveIq.cpp  QXmppArchiveIq.h  QXmppBindIq.cpp  QXmppBindIq.h  QXmppBitsOfBinaryContentId.cpp  QXmppBitsOfBinaryContentId.h  QXmppBitsOfBinaryData.cpp  QXmppBitsOfBinaryData.h  QXmppBitsOfBinaryDataList.cpp  QXmppBitsOfBinaryDataList.h  QXmppBitsOfBinaryIq.cpp  QXmppBitsOfBinaryIq.h  QXmppBookmarkSet.cpp  QXmppBookmarkSet.h  QXmppCodec.h  (+234 more)
tests/: CMakeLists.txt  IntegrationTesting.h  TestClient.h  codec.cpp  codec.h  dataform.cpp  dataform.h  install-build-depends  iq.cpp  iq.h  jingle.cpp  message.cpp  message.h  presence.cpp  presence.h  pubsubutil.h  register.cpp  register.h  roster.cpp  rpc.cpp  rsm.cpp  rsm.h  rtp.cpp  rtp.h  run.py  sasl.cpp  sasl.h  si.cpp  si.h  stanza.cpp  stun.cpp  stun.h  test.mng  tests.cpp  tests.h  tests.pri  tests.pro  tests.qrc  util.h  vcard.cpp  (+1 more)
(+660 files in other folders)
